fix : tableCount를 사용해서 예상 대기 시간 조회 로직 변경